# nasa-adap

./: .gitignore  README.md  data-storage-flowchart.json  pyproject.toml  temp_README.md  test.fits
data/: asassn_fp.py  atlas_fp.py  caat.csv  opensn.py  ztf_fp.py
data/FBOT/SNIbn/SN2005la/: SN2005la_cfa_data_release.json
data/FBOT/SNIbn/SN2006jc/: SN2006jc_cfa_data_release.json  SN2006jc_datacube_mangled.csv
data/FBOT/SNIbn/SN2015G/: SN2015G_datacube_mangled.csv
data/FBOT/SNIbn/SN2016edk/: SN2016edk_opensn.json
data/FBOT/SNIbn/SN2018jbs/: SN2018jbs_datacube_mangled.csv  SN2018jbs_ztf_fp.json  batchfp_req0000895667_lc.txt
data/FBOT/SNIbn/SN2019aajs/: SN2019aajs_datacube_mangled.csv  SN2019aajs_ztf_fp.json  (+1 more)
data/comparison_models/Khakpash24/: all_templates.pkl
data/data_releases/CSP_SESNe/: README.md  csp_sesne_processor.py  table1.txt  table6.txt
data/final_models/: FBOT_SNIcn_GP_model.fits  SESNe_SNIIb_GP_model.fits  SESNe_SNIIb_GP_model_-20_50_UVW2UVM2UVW1UBgcVroi.pkl  SNII_SNII_template_-20_50_UVW2UVM2UVW1UBgcVroi.csv
examples/: compare_models.ipynb  loading_data.ipynb  train_test_split.ipynb  using_gp_models.ipynb
fitting/: Untitled.ipynb  demo.ipynb  models.py  run.py
src/caat/: CAAT.py  DataCube.py  Diagnostics.py  GP.py  GP3D.py  Kernels.py  Plot.py  SN.py  SNCollection.py  SNModel.py  __init__.py  utils.py
tests/: conftest.py  test_GP3D.py  test_caat.py  test_sn.py  test_sncollection.py
tests/Datacube/: test_datacube.py
tests/GP/: conftest.py  test_GP.py
tests/GP3D/: conftest.py  test_GP3D.py
tests/Kernels/: test_kernels.py
(+3774 files in other folders)
